# stdlib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  quick_cmake_build.py  xmake.lua
src/: CMakeLists.txt
src/alloc/: CMakeLists.txt  alloc.cppm  collections.cppm  integer_sequence.cppm  mem.cppm  string.cppm  text.cppm
src/alloc/collections/: deque.cppm  flat_map.cppm  flat_set.cppm  forward_list.cppm  hash_map.cppm  hash_set.cppm  linked_list.cppm  list.cppm  map.cppm  queue.cppm  set.cppm  singly_linked_list.cppm  stack.cppm  tree_map.cppm  tree_set.cppm  unordered_map.cppm  unordered_set.cppm  valarray.cppm  vector.cppm
src/alloc/mem/: cstdlib.cppm  memory.cppm  memory_resource.cppm  new_header.cppm  scoped_allocator.cppm
src/alloc/ranges/: memory.cppm  ranges.cppm
src/alloc/text/: regex.cppm  string.cppm
src/alloc/text/string/: cstring.cppm  string.cppm
src/core/: CMakeLists.txt  array.cppm  collections.cppm  compare.cppm  concepts.cppm  contracts.cppm  core.cppm  cstddef.cppm  exception.cppm  expected.cppm  fmt.cppm  functional.cppm  initializer_list.cppm  io.cppm  iter.cppm  limits.cppm  math.cppm  meta.cppm  optional.cppm  pair.cppm  ranges.cppm  sequence.cppm  span.cppm  string_view.cppm  sys.cppm  system_error.cppm  tags.cppm  text.cppm  tuple.cppm  util.cppm  variant.cppm
src/core/collections/: bitset.cppm
src/core/fmt/: cinttypes.cppm  cinttypes_constants.cppm
src/core/io/: ios.cppm  streambuf.cppm
src/core/iter/: iterator.cppm
src/core/math/: algorithm.cppm  bit.cppm  cmath.cppm  complex.cppm  cstddef.cppm  numbers.cppm  numeric.cppm  ratio.cppm
src/core/meta/: source_location.cppm  stacktrace.cppm  type_traits.cppm  typeindex.cppm  typeinfo.cppm
src/core/ranges/: algorithm.cppm  functional.cppm  generator.cppm  iterator.cppm  ranges.cppm
src/core/sys/: cinttypes.cppm  csetjmp.cppm  csignal.cppm  csignal_constants.cppm  cstdlib.cppm  utility.cppm
src/core/text/: cctype.cppm  charconv.cppm  cstdlib.cppm  string.cppm
src/core/text/string/: string_view.cppm
src/core/util/: algorithm.cppm  cstdlib.cppm  numeric.cppm  utility.cppm
src/std/: CMakeLists.txt  collections.cppm  concurrent.cppm  core.cppm  execution.cppm  fmt.cppm  fs.cppm  io.cppm  iter.cppm  math.cppm  mem.cppm  meta.cppm  net.cppm  random.cppm  ranges.cppm  std.cppm  sync.cppm  sys.cppm  text.cppm  time.cppm  util.cppm
src/std/collections/: bitset.cppm  deque.cppm  flat_map.cppm  flat_set.cppm  forward_list.cppm  hash_map.cppm  hash_set.cppm  linked_list.cppm  list.cppm  map.cppm  queue.cppm  set.cppm  singly_linked_list.cppm  stack.cppm  tree_map.cppm  tree_set.cppm  unordered_map.cppm  unordered_set.cppm  valarray.cppm  vector.cppm
src/std/concurrent/: coroutine.cppm  future.cppm  stop_token.cppm  thread.cppm
src/std/core/: any.cppm  array.cppm  compare.cppm  concepts.cppm  contracts.cppm  cstddef.cppm  exception.cppm  expected.cppm  functional.cppm  initializer_list.cppm  integer_sequence.cppm  limits.cppm  optional.cppm  pair.cppm  sequence.cppm  span.cppm  string.cppm  string_view.cppm  system_error.cppm  tags.cppm  tuple.cppm  variant.cppm
src/std/execution/: execution.cppm
src/std/fmt/: charconv.cppm  cinttypes.cppm  format.cppm
src/std/fs/: filesystem.cppm  glob.cppm
src/std/io/: cstdio.cppm  cwchar.cppm  fstream.cppm  iomanip.cppm  ios.cppm  iostream.cppm  istream.cppm  ostream.cppm  print.cppm  spanstream.cppm  sstream.cppm  streambuf.cppm  string.cppm  syncstream.cppm
src/std/iter/: iterator.cppm
src/std/math/: algorithm.cppm  bit.cppm  cmath.cppm  complex.cppm  cstddef.cppm  numbers.cppm  numeric.cppm  random.cppm  ratio.cppm
src/std/mem/: cstdlib.cppm  memory.cppm  memory_resource.cppm  new_header.cppm  scoped_allocator.cppm
src/std/meta/: source_location.cppm  stacktrace.cppm  type_traits.cppm  typeindex.cppm  typeinfo.cppm
src/std/net/: buffer.cppm  executor.cppm  internet.cppm  iocontext.cppm  socket.cppm  timer.cppm
src/std/random/: random.cppm
src/std/ranges/: algorithm.cppm  functional.cppm  generator.cppm  iterator.cppm  memory.cppm  ranges.cppm
src/std/sync/: atomic.cppm  barrier.cppm  condition_variable.cppm  latch.cppm  mutex.cppm  semaphore.cppm  shared_mutex.cppm
src/std/sys/: cinttypes.cppm  csetjmp.cppm  csignal.cppm  cstdlib.cppm  utility.cppm
src/std/text/: cctype.cppm  charconv.cppm  cstdlib.cppm  regex.cppm  string.cppm
src/std/text/string/: cstring.cppm  string.cppm  string_view.cppm
src/std/time/: chrono.cppm  chrono.detail.cppm  chrono_detail.cppm  ctime.cppm
src/std/util/: algorithm.cppm  cstdlib.cppm  numeric.cppm  utility.cppm
src/stdx/: CMakeLists.txt  arch.cppm  compiler.cppm  core.cppm  crypto.cppm  csv.cppm  ffi.cppm  json.cppm  linq.cppm  math.cppm  net.cppm  os.cppm  process.cppm  sql.cppm  stdx.cppm  util.cppm  xml.cppm  zip.cppm
src/stdx/arch/: arm.cppm  x86.cppm
src/stdx/arch/arm/: arm_neon.cppm
src/stdx/arch/x86/: immintrin.cppm  x86intrin.cppm
src/stdx/compiler/: clang.cppm  llvm.cppm
src/stdx/compiler/clang/: api_notes.cppm
src/stdx/compiler/llvm/: InitializePasses.cppm  Pass.cppm
src/stdx/core/: Exceptions.cppm
src/stdx/core/exceptions/: ArithmeticException.cppm  InvalidOperationException.cppm  NotImplementedException.cppm  NullPointerException.cppm  UnsupportedOperationException.cppm
src/stdx/crypto/: Cipher.cppm
src/stdx/linq/: Query.cppm
src/stdx/math/: BigDecimal.cppm  BigInteger.cppm
src/stdx/os/: linux.cppm  unix.cppm  win32.cppm
src/stdx/os/linux/: arpa.cppm  asm-generic.cppm  net.cppm  netinet.cppm  sys.cppm
src/stdx/os/unix/: aio.cppm  arpa.cppm  dirent.cppm  dlfcn.cppm  fcntl.cppm  fmtmsg.cppm  fnmatch.cppm  ftw.cppm  (+28 more)
src/stdx/process/: Child.cppm  ChildStderr.cppm  ChildStdin.cppm  ChildStdout.cppm  Command.cppm  CommandArgs.cppm  CommandEnvs.cppm  ExitCode.cppm  ExitStatus.cppm  ExitStatusError.cppm  Output.cppm  PipeStream.cppm  Stdio.cppm
src/stdx/util/: Argument.cppm  ArgumentParser.Details.cppm  ArgumentParser.cppm  ParsedArguments.cppm  logging.cppm
src/stdx/xml/: Document.cppm  Node.cppm  StringPair.cppm
(+105 files in other folders)
